# qt_rtsp

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
.openclaw/: workspace-state.json
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake
build-release/src/client/: Makefile  cmake_install.cmake
build-release/src/client/qt_client_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/src/client/qt_client_autogen/3YJK5W5UP7/: qrc_resources.cpp
build-release/src/client/qt_client_autogen/5SSUPNRDSB/: moc_tcp_client_worker.cpp  moc_tcp_client_worker.cpp.d
build-release/src/client/qt_client_autogen/BL3K65LMA5/: moc_database_service.cpp  moc_database_service.cpp.d
build-release/src/client/qt_client_autogen/HTGEZKIBRU/: moc_record_worker.cpp  moc_record_worker.cpp.d  moc_stream_worker.cpp  moc_stream_worker.cpp.d
build-release/src/client/qt_client_autogen/V6MOHEPR4H/: moc_app_repository.cpp  moc_app_repository.cpp.d
build-release/src/client/qt_client_autogen/VJIZ3MDCXP/: moc_main_window.cpp  moc_main_window.cpp.d
build-release/src/common/: Makefile  cmake_install.cmake
build-release/src/server/: Makefile  cmake_install.cmake  sim_server
conf/: client.ini
config/: client_cfg.db
data/: client_data.sqlite
labels/: class_map.ini  class_map.txt  example_labels.txt
media/record/: record_meta.jsonl
release/: README_RELEASE.md
release/conf/: client.ini.template
release/media/: README.md
release/scripts/: run_client.sh  run_server.sh
src/client/: CMakeLists.txt
src/client/app/: main.cpp  main_window.cpp  main_window.h
src/client/core/: app_config.h  types.h
src/client/database/: database_service.cpp  database_service.h
src/client/media/: record_worker.cpp  record_worker.h  stream_worker.cpp  stream_worker.h
src/client/network/: tcp_client_worker.cpp  tcp_client_worker.h
src/client/repository/: app_repository.cpp  app_repository.h
src/client/resources/: app_icon.xpm  resources.qrc
src/common/: CMakeLists.txt
src/common/core/: timestamp.h
src/common/msg/: json_codec.h  message.proto  telemetry.proto  telemetry_msg.h
src/common/protocol/: messages.h
src/media_core/: CMakeLists.txt  main.cpp  media_api.cpp  media_api.h
src/server/: CMakeLists.txt
src/server/app/: main.cpp
src/server/media/: rtsp_launcher.cpp  rtsp_launcher.h
src/server/network/: tcp_sim_server.cpp  tcp_sim_server.h
tests/: CMakeLists.txt  rtsp_pull_test.py  test_proto_db_schema.py  test_qt_stream_worker.cpp  test_rtsp_pull_api.cpp
